<resources>
    <string name="app_name">LegalpediaPlus</string>
    <string name="app_version">v0.9.7</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="notify">Notification</string>
    <!-- Navigation Drawer menu labels -->
    <string name="no_search_available">No resource matching your search request available</string>
    <string name="no_data_available">No resource available</string>
    <string name="no_notes_available">You have not saved any notes</string>
    <string name="no_researchrequest_available">You dont have any research request</string>
    <string name="dictionary_menu">Dictionary/Legal Maxims</string>
    <string name="forms_menu">Forms and Precedence</string>
    <string name="articles_menu">Articles / Journals</string>
    <string name="news_menu">Profitable Law Firm Series</string>
    <string name="nav_home">Home</string>
    <string name="nav_notes">Notes</string>
    <string name="nav_genie">Research Genie (Beta)</string>
    <string name="request_integrity">Your app may have incomplete resources.Would you like to fix this issue?</string>
    <string name="data_completed">Your app resources are currently complete.</string>
    <string name="nav_myaccount">My Account</string>
    <string name="nav_reset">Reset my account</string>
    <string name="nav_bugreport">Report a problem</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_changepassword">Change Password</string>
    <string name="nav_movies">Movies</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>
    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_videos">Tutorials</string>
    <string name="action_reset">Reset my account</string>
    <string name="about_app_version">version 0.9.7</string>
    <string name="action_about">About Us</string>
    <string name="action_about_year">2017</string>
    <string name="action_aboutfull">Legalpedia.\nEnjoy thousands of legal resources on your mobile device.\n\nLegalpedia is a legal resource app for your phone and computer. The Legalpedia App has been installed on more than 10,000 devices in Nigeria.\n\nWith your Legalpedia app nearby, you can access your bookmarks, notes, recent cases, defend your client in court and connect with other legal professional at anytime and from anywhere, all on your mobile device.\n\n*Use it on any mobile device\n\n*Enjoy over 12000 supreme court cases with summaries and weekly updates.\n\n*Instant access to public notes written by fellow legal professionals to aid research on the go
*Numerous valuable legal resources for research.\n\nIt\'s easy to use. It\'s right where you are. It\'s fast when you need it.</string>
    <string name="action_settings">Settings</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="skip">Skip</string>
    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Photos</item>
        <item>Movies</item>
        <item>Notifications</item>
        <item>Settings</item>
    </string-array>

    <string name="pref_pref1">pref_pref1</string>
    <string name="pref_pref2">pref_pref2</string>
    <string name="pref_pref3">pref_pref3</string>


    <string name="updates">Enable/Disable Updates</string>
    <string name="updates_summ">Enable instant updates</string>

    <string name="notifications_summ">Receive notifications from server</string>
    <string name="notifications">Receive Notifications</string>
    <string name="verify_later">No SMS yet? Verify later</string>

    <string name="keep_signed_summ">Persist sign in information</string>
    <string name="keep_signed">Keep me signed in</string>
    <string name="domain">resources.legalpediaonline.com</string>
    <!--<string name="domain">192.168.1.3:9999</string>-->
    <array name="filter_list">
        <item value="alpha">A-Z</item>
        <item value="date">Now-1960</item>
    </array>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_my_account">MyAccountActivity</string>
</resources>
