<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.v7.preference.PreferenceCategory
        android:title="App Settings">

        <android.support.v7.preference.SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="@string/pref_pref1"
            android:summary="@string/updates_summ"
            android:title="@string/updates"/>


        <android.support.v7.preference.SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="@string/pref_pref1"
            android:summary="@string/notifications_summ"
            android:title="@string/notifications"/>


        <android.support.v7.preference.SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="@string/pref_pref1"
            android:summary="@string/keep_signed_summ"
            android:title="@string/keep_signed"/>
    </android.support.v7.preference.PreferenceCategory>



</android.support.v7.preference.PreferenceScreen>