<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include
        android:id="@+id/app_bar"
        layout="@layout/main_toolbar"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/logo"/>
    <TextView
        android:id="@+id/about_us_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/logo"
        android:layout_marginLeft="10dp"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:text="@string/action_aboutfull" />

            <LinearLayout
                android:id="@+id/about_name"
                android:layout_below="@id/about_us_view"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal">
            <TextView
        android:id="@+id/about_app"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:textColor="@color/primary"
        android:gravity="center_horizontal"
        android:textSize="20dp"
        android:text="@string/app_name" />

    <TextView
        android:id="@+id/about_app_version"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textColor="@color/black"
        android:layout_marginLeft="5dp"
        android:textSize="15dp"
        android:text="@string/about_app_version" />



        </LinearLayout>
            <TextView
                android:id="@+id/about_app_year"
                android:layout_below="@id/about_name"
                android:gravity="center_horizontal"
                android:layout_gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/black"
                android:layout_marginLeft="5dp"
                android:layout_marginBottom="40dp"
                android:textSize="15dp"
                android:text="@string/action_about_year" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>